--- a/src/slices/Hero/style.module.css
+++ b/src/slices/Hero/style.module.css
@@ -16,9 +16,6 @@
       margin-bottom: 1rem;
       text-wrap: balance;
     }
-    > h1 {
-      font-size: 3rem;
-    }
     > div > a {
       display: inline-block;
       padding: 0.75rem 1.5rem;
