--- a/src/slices/TextBlock/style.module.css
+++ b/src/slices/TextBlock/style.module.css
@@ -3,15 +3,6 @@
   padding: 2rem;
   margin: 1rem;
   border-radius: 16px;
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    text-wrap: balance;
-  }
 
   p:not(:last-child) {
     margin-bottom: 1rem;
